Fix swiper on mobile

--- a/packages/website/src/components/Swiper/index.module.scss
+++ b/packages/website/src/components/Swiper/index.module.scss
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  touch-action: none;
 
   height: 300px;
 
@@ -20,7 +21,10 @@
 
   width: calc(100% * var(--slide-count));
 
+  gap: 0.75em;
+
   @include breakpoint-up('md') {
+    gap: 0;
     width: auto;
   }
 
@@ -39,6 +43,7 @@
   height: 100%;
 
   transition: transform 0.4s ease-in;
+  touch-action: none;
 
   @include breakpoint-down('md') {
     // JS may change the transform, but we reset it anyway
@@ -57,7 +62,7 @@
     z-index: 1;
 
     > * {
-      box-shadow: 0 0 1px #000;
+      box-shadow: 0 0 3px #000;
     }
   }
 
